Updated README and task for detecting the apps route

--- a/apb/Dockerfile
+++ b/apb/Dockerfile
@@ -1,64 +1,64 @@
-FROM quay.io/openshiftlabs/apb-base:1.2
+FROM ansibleplaybookbundle/apb-base:release-1.3
 
 LABEL "com.redhat.apb.spec"=\
-"dmVyc2lvbjogMS4wCm5hbWU6IHN0YXJ0ZXItd29ya3Nob3AtYXBiCmRlc2NyaXB0aW9uOiBBUEIg\
-dG8gZGVwbG95IHJlcXVpcmVkIGluZnJhIGNvbXBvbmVudHMgZm9yIHRoZSBEZXZlbG9wZXIgU3Rh\
-cnRlciBXb3Jrc2hvcCBvbiBhbiBPcGVuU2hpZnQgY2x1c3RlcgpiaW5kYWJsZTogRmFsc2UKYXN5\
-bmM6IG9wdGlvbmFsCnRhZ3M6Ci0gd29ya3Nob3AKbWV0YWRhdGE6CiAgZGVwZW5kZW5jaWVzOiBb\
-J2RvY2tlci5pby9vc2V2Zy93b3Jrc2hvcHBlcjpsYXRlc3QnLCdkb2NrZXIuaW8vb3BlbnNoaWZ0\
-ZGVtb3MvZ29nczowLjExLjM0JywncXVheS5pby93a3VsaGFuZWsvZXRoZXJwYWQ6MS42LjUnLCdk\
-b2NrZXIuaW8vc29uYXR5cGUvbmV4dXMzOjMuMTEuMCcsICdkb2NrZXIuaW8vZWNsaXBzZS9jaGUt\
-c2VydmVyOjMuNy4xJywgJ2RvY2tlci5pby9yYWZmYWVsZXNwYXp6b2xpL29jcC1vcHMtdmlldzps\
-YXRlc3QnXQogIGRpc3BsYXlOYW1lOiAiT3BlblNoaWZ0IERldmVsb3BlciBTdGFydGVyIFdvcmtz\
-aG9wIEluc3RhbGxlciIKICBsb25nRGVzY3JpcHRpb246IHwtCiAgICBJbnN0YWxscyB0aGUgbGFi\
-IGluc3RydWN0aW9ucyBhbmQgcmVxdWlyZWQgY29tcG9uZW50cwogICAgLSBHb2dzIHNlcnZlcgog\
-ICAgLSBOZXh1cwogICAgLSBFdGhlcnBhZAogICAgLSBMYWIgR3VpZGVzCiAgICAtIEVjbGlwc2Ug\
-Q2hlCiAgICAtIE9DUC1PcHNWaWV3IChpbWFnZSBieSBSYWZmYWVsZSBTcGF6em9saSkKICAgIGZv\
-ciBydW5uaW5nIHRoZSBHZXR0aW5nIHN0YXJ0ZXIgZGV2ZWxvcGluZyBvbiBPcGVuU2hpZnQgV29y\
-a3Nob3AgaHR0cHM6Ly9naXRodWIuY29tL29wZW5zaGlmdC1sYWJzL3N0YXJ0ZXItZ3VpZGVzCiAg\
-Y29uc29sZS5vcGVuc2hpZnQuaW8vaWNvbkNsYXNzOiAicGZpY29uIHBmaWNvbi1wcm9jZXNzLWF1\
-dG9tYXRpb24iCiAgcHJvdmlkZXJEaXNwbGF5TmFtZTogIlJlZCBIYXQsIEluYy4iCnBsYW5zOgog\
-IC0gbmFtZTogZGVmYXVsdAogICAgZGVzY3JpcHRpb246IERlcGxveXMgT3BlblNoaWZ0IFN0YXJ0\
-ZXIgV29ya3Nob3AgSW5mcmFzdHJ1Y3R1cmUKICAgIGZyZWU6IFRydWUKICAgIG1ldGFkYXRhOgog\
-ICAgICBkaXNwbGF5TmFtZTogRGVmYXVsdAogICAgcGFyYW1ldGVyczoKICAgIC0gbmFtZTogb3Bl\
-bnNoaWZ0X3VzZXIKICAgICAgdGl0bGU6IFVzZXJuYW1lCiAgICAgIGRlc2NyaXB0aW9uOiBVc2Vy\
-IGlzIHJlcXVpcmVkIGZvciBjcmVhdGluZyBwcm9qZWN0IGFkbWluIHJlc291cmNlcwogICAgICB0\
-eXBlOiBzdHJpbmcKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV90eXBlOiB0ZXh0\
-CiAgICAgIGRpc3BsYXlfZ3JvdXA6IE9wZW5TaGlmdCBVc2VyCiAgICAtIG5hbWU6IG9wZW5zaGlm\
-dF9wYXNzd29yZAogICAgICB0aXRsZTogUGFzc3dvcmQKICAgICAgZGVzY3JpcHRpb246IFBhc3N3\
-b3JkIGlzIHJlcXVpcmVkIGZvciBjcmVhdGluZyBwcm9qZWN0IGFkbWluIHJlc291cmNlcwogICAg\
-ICB0eXBlOiBzdHJpbmcKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV90eXBlOiBw\
-YXNzd29yZAogICAgICBkaXNwbGF5X2dyb3VwOiBPcGVuU2hpZnQgVXNlcgogICAgLSBuYW1lOiB3\
-b3Jrc2hvcF90eXBlCiAgICAgIHRpdGxlOiBXb3Jrc2hvcCB0eXBlCiAgICAgIGRlc2NyaXB0aW9u\
-OiBUeXBlIG9mIHdvcmtzaG9wIHRvIGRlbGl2ZXIgKEphdmEsIFB5dGhvbiwgbm9kZS5qcykKICAg\
-ICAgdHlwZTogZW51bQogICAgICBlbnVtOiBbJ2phdmEnLCAncHl0aG9uJywgJ25vZGUuanMnLCAn\
-cGhwJ10KICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV90eXBlOiBzZWxlY3QKICAg\
-ICAgZGVmYXVsdDogamF2YQogICAgICBkaXNwbGF5X2dyb3VwOiBXb3Jrc2hvcAogICAgLSBuYW1l\
-OiB1c2VyX2NvdW50CiAgICAgIHRpdGxlOiBOdW1iZXIgb2YgcGFydGljaXBhbnRzCiAgICAgIGRl\
-c2NyaXB0aW9uOiBOdW1iZXIgb2YgcGFydGljaXBhbnRzIGZvciB0aGUgd29ya3Nob3AuIFRoZXJl\
-IHdpbGwgYmUgcHJvdmlzaW9uZWQgaW5mcmFzdHJ1Y3R1cmUvcHJvamVjdCBmb3IgZWFjaCBwYXJ0\
-aWNpcGFudAogICAgICB0eXBlOiBudW1iZXIKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlz\
-cGxheV9ncm91cDogV29ya3Nob3AKICAgIC0gbmFtZTogb3BlbnNoaWZ0X3VzZXJfcGFzc3dvcmQK\
-ICAgICAgdGl0bGU6IE9wZW5TaGlmdCBVc2VyIFBhc3N3b3JkCiAgICAgIGRlc2NyaXB0aW9uOiBU\
-aGUgT3BlblNoaWZ0IHBhc3N3b3JkIGZvciBwYXJ0aWNpcGFudHMgdG8gYmUgZGlzcGxheWVkIGlu\
-IHRoZSBsYWIgZ3VpZGUgdG8gcGFydGljaXBhbnRzCiAgICAgIHR5cGU6IHN0cmluZwogICAgICBy\
-ZXF1aXJlZDogdHJ1ZQogICAgICBkaXNwbGF5X3R5cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91\
-cDogV29ya3Nob3AKICAgIC0gbmFtZTogb3BlbnNoaWZ0X21hc3Rlcl91cmwKICAgICAgdGl0bGU6\
-IE9wZW5TaGlmdCBNYXN0ZXIgVVJMCiAgICAgIGRlc2NyaXB0aW9uOiBUaGUgYWRkcmVzcyB0byBP\
-cGVuU2hpZnQgbWFzdGVyIFVSTCB0byBiZSBkaXNwbGF5ZWQgaW4gdGhlIGxhYiBndWlkZSB0byBw\
-YXJ0aWNpcGFudHMKICAgICAgdHlwZTogc3RyaW5nCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAg\
-IGRpc3BsYXlfdHlwZTogdGV4dAogICAgICBkaXNwbGF5X2dyb3VwOiBMYWIgR3VpZGUKICAgIC0g\
-bmFtZTogaW5mcmFzdmNzX2FkbV91c2VyCiAgICAgIHRpdGxlOiBJbmZyYXN0cnVjdHVyZSBTZXJ2\
-aWNlcyBBZG1pbiBVc2VyCiAgICAgIGRlc2NyaXB0aW9uOiBBZG1pbiB1c2VyIGZvciBpbmZyYXN0\
-cnVjdHVyZSBzZXJ2aWNlcyAoR29ncywgQ2hlLCAuLi4pCiAgICAgIHR5cGU6IHN0cmluZwogICAg\
-ICBkZWZhdWx0OiAiYWRtaW51c2VyIgogICAgICByZXF1aXJlZDogdHJ1ZQogICAgICBkaXNwbGF5\
-X3R5cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogSW5mcmFzdHJ1Y3R1cmUgU2VydmljZXMK\
-ICAgIC0gbmFtZTogaW5mcmFzdmNzX2FkbV9wYXNzd29yZAogICAgICB0aXRsZTogSW5mcmFzdHJ1\
-Y3R1cmUgU2VydmljZXMgQWRtaW4gUGFzc3dvcmQKICAgICAgZGVzY3JpcHRpb246IEFkbWluIHBh\
-c3N3b3JkIGZvciBpbmZyYXN0cnVjdHVyZSBzZXJ2aWNlcyAoR29ncywgQ2hlLCAuLi4pCiAgICAg\
-IHR5cGU6IHN0cmluZwogICAgICBkZWZhdWx0OiAiYWRtaW4xMjMiCiAgICAgIHJlcXVpcmVkOiB0\
-cnVlCiAgICAgIGRpc3BsYXlfdHlwZTogdGV4dAogICAgICBkaXNwbGF5X2dyb3VwOiBJbmZyYXN0\
-cnVjdHVyZSBTZXJ2aWNlcwo="
+"dmVyc2lvbjogJzEuMC4wJwpuYW1lOiBzdGFydGVyLXdvcmtzaG9wLWFwYgpkZXNjcmlwdGlvbjog\
+QVBCIHRvIGRlcGxveSByZXF1aXJlZCBpbmZyYSBjb21wb25lbnRzIGZvciB0aGUgRGV2ZWxvcGVy\
+IFN0YXJ0ZXIgV29ya3Nob3Agb24gYW4gT3BlblNoaWZ0IGNsdXN0ZXIKYmluZGFibGU6IEZhbHNl\
+CmFzeW5jOiBvcHRpb25hbAp0YWdzOgotIHdvcmtzaG9wCm1ldGFkYXRhOgogIGRlcGVuZGVuY2ll\
+czogWydkb2NrZXIuaW8vb3Nldmcvd29ya3Nob3BwZXI6bGF0ZXN0JywnZG9ja2VyLmlvL29wZW5z\
+aGlmdGRlbW9zL2dvZ3M6MC4xMS4zNCcsJ3F1YXkuaW8vd2t1bGhhbmVrL2V0aGVycGFkOjEuNi41\
+JywnZG9ja2VyLmlvL3NvbmF0eXBlL25leHVzMzozLjExLjAnLCAnZG9ja2VyLmlvL2VjbGlwc2Uv\
+Y2hlLXNlcnZlcjozLjcuMScsICdkb2NrZXIuaW8vcmFmZmFlbGVzcGF6em9saS9vY3Atb3BzLXZp\
+ZXc6bGF0ZXN0J10KICBkaXNwbGF5TmFtZTogIk9wZW5TaGlmdCBEZXZlbG9wZXIgU3RhcnRlciBX\
+b3Jrc2hvcCBJbnN0YWxsZXIiCiAgbG9uZ0Rlc2NyaXB0aW9uOiB8LQogICAgSW5zdGFsbHMgdGhl\
+IGxhYiBpbnN0cnVjdGlvbnMgYW5kIHJlcXVpcmVkIGNvbXBvbmVudHMKICAgIC0gR29ncyBzZXJ2\
+ZXIKICAgIC0gTmV4dXMKICAgIC0gRXRoZXJwYWQKICAgIC0gTGFiIEd1aWRlcwogICAgLSBFY2xp\
+cHNlIENoZQogICAgLSBPQ1AtT3BzVmlldyAoaW1hZ2UgYnkgUmFmZmFlbGUgU3BhenpvbGkpCiAg\
+ICBmb3IgcnVubmluZyB0aGUgR2V0dGluZyBzdGFydGVyIGRldmVsb3Bpbmcgb24gT3BlblNoaWZ0\
+IFdvcmtzaG9wIGh0dHBzOi8vZ2l0aHViLmNvbS9vcGVuc2hpZnQtbGFicy9zdGFydGVyLWd1aWRl\
+cwogIGNvbnNvbGUub3BlbnNoaWZ0LmlvL2ljb25DbGFzczogInBmaWNvbiBwZmljb24tcHJvY2Vz\
+cy1hdXRvbWF0aW9uIgogIHByb3ZpZGVyRGlzcGxheU5hbWU6ICJSZWQgSGF0LCBJbmMuIgpwbGFu\
+czoKICAtIG5hbWU6IGRlZmF1bHQKICAgIGRlc2NyaXB0aW9uOiBEZXBsb3lzIE9wZW5TaGlmdCBT\
+dGFydGVyIFdvcmtzaG9wIEluZnJhc3RydWN0dXJlCiAgICBmcmVlOiBUcnVlCiAgICBtZXRhZGF0\
+YToKICAgICAgZGlzcGxheU5hbWU6IERlZmF1bHQKICAgIHBhcmFtZXRlcnM6CiAgICAtIG5hbWU6\
+IG9wZW5zaGlmdF91c2VyCiAgICAgIHRpdGxlOiBVc2VybmFtZQogICAgICBkZXNjcmlwdGlvbjog\
+VXNlciBpcyByZXF1aXJlZCBmb3IgY3JlYXRpbmcgcHJvamVjdCBhZG1pbiByZXNvdXJjZXMKICAg\
+ICAgdHlwZTogc3RyaW5nCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfdHlwZTog\
+dGV4dAogICAgICBkaXNwbGF5X2dyb3VwOiBPcGVuU2hpZnQgVXNlcgogICAgLSBuYW1lOiBvcGVu\
+c2hpZnRfcGFzc3dvcmQKICAgICAgdGl0bGU6IFBhc3N3b3JkCiAgICAgIGRlc2NyaXB0aW9uOiBQ\
+YXNzd29yZCBpcyByZXF1aXJlZCBmb3IgY3JlYXRpbmcgcHJvamVjdCBhZG1pbiByZXNvdXJjZXMK\
+ICAgICAgdHlwZTogc3RyaW5nCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfdHlw\
+ZTogcGFzc3dvcmQKICAgICAgZGlzcGxheV9ncm91cDogT3BlblNoaWZ0IFVzZXIKICAgIC0gbmFt\
+ZTogd29ya3Nob3BfdHlwZQogICAgICB0aXRsZTogV29ya3Nob3AgdHlwZQogICAgICBkZXNjcmlw\
+dGlvbjogVHlwZSBvZiB3b3Jrc2hvcCB0byBkZWxpdmVyIChKYXZhLCBQeXRob24sIG5vZGUuanMp\
+CiAgICAgIHR5cGU6IGVudW0KICAgICAgZW51bTogWydqYXZhJywgJ3B5dGhvbicsICdub2RlLmpz\
+JywgJ3BocCddCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfdHlwZTogc2VsZWN0\
+CiAgICAgIGRlZmF1bHQ6IGphdmEKICAgICAgZGlzcGxheV9ncm91cDogV29ya3Nob3AKICAgIC0g\
+bmFtZTogdXNlcl9jb3VudAogICAgICB0aXRsZTogTnVtYmVyIG9mIHBhcnRpY2lwYW50cwogICAg\
+ICBkZXNjcmlwdGlvbjogTnVtYmVyIG9mIHBhcnRpY2lwYW50cyBmb3IgdGhlIHdvcmtzaG9wLiBU\
+aGVyZSB3aWxsIGJlIHByb3Zpc2lvbmVkIGluZnJhc3RydWN0dXJlL3Byb2plY3QgZm9yIGVhY2gg\
+cGFydGljaXBhbnQKICAgICAgdHlwZTogbnVtYmVyCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAg\
+IGRpc3BsYXlfZ3JvdXA6IFdvcmtzaG9wCiAgICAtIG5hbWU6IG9wZW5zaGlmdF91c2VyX3Bhc3N3\
+b3JkCiAgICAgIHRpdGxlOiBPcGVuU2hpZnQgVXNlciBQYXNzd29yZAogICAgICBkZXNjcmlwdGlv\
+bjogVGhlIE9wZW5TaGlmdCBwYXNzd29yZCBmb3IgcGFydGljaXBhbnRzIHRvIGJlIGRpc3BsYXll\
+ZCBpbiB0aGUgbGFiIGd1aWRlIHRvIHBhcnRpY2lwYW50cwogICAgICB0eXBlOiBzdHJpbmcKICAg\
+ICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV90eXBlOiB0ZXh0CiAgICAgIGRpc3BsYXlf\
+Z3JvdXA6IFdvcmtzaG9wCiAgICAtIG5hbWU6IG9wZW5zaGlmdF9tYXN0ZXJfdXJsCiAgICAgIHRp\
+dGxlOiBPcGVuU2hpZnQgTWFzdGVyIFVSTAogICAgICBkZXNjcmlwdGlvbjogVGhlIGFkZHJlc3Mg\
+dG8gT3BlblNoaWZ0IG1hc3RlciBVUkwgdG8gYmUgZGlzcGxheWVkIGluIHRoZSBsYWIgZ3VpZGUg\
+dG8gcGFydGljaXBhbnRzCiAgICAgIHR5cGU6IHN0cmluZwogICAgICByZXF1aXJlZDogdHJ1ZQog\
+ICAgICBkaXNwbGF5X3R5cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogTGFiIEd1aWRlCiAg\
+ICAtIG5hbWU6IGluZnJhc3Zjc19hZG1fdXNlcgogICAgICB0aXRsZTogSW5mcmFzdHJ1Y3R1cmUg\
+U2VydmljZXMgQWRtaW4gVXNlcgogICAgICBkZXNjcmlwdGlvbjogQWRtaW4gdXNlciBmb3IgaW5m\
+cmFzdHJ1Y3R1cmUgc2VydmljZXMgKEdvZ3MsIENoZSwgLi4uKQogICAgICB0eXBlOiBzdHJpbmcK\
+ICAgICAgZGVmYXVsdDogImFkbWludXNlciIKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlz\
+cGxheV90eXBlOiB0ZXh0CiAgICAgIGRpc3BsYXlfZ3JvdXA6IEluZnJhc3RydWN0dXJlIFNlcnZp\
+Y2VzCiAgICAtIG5hbWU6IGluZnJhc3Zjc19hZG1fcGFzc3dvcmQKICAgICAgdGl0bGU6IEluZnJh\
+c3RydWN0dXJlIFNlcnZpY2VzIEFkbWluIFBhc3N3b3JkCiAgICAgIGRlc2NyaXB0aW9uOiBBZG1p\
+biBwYXNzd29yZCBmb3IgaW5mcmFzdHJ1Y3R1cmUgc2VydmljZXMgKEdvZ3MsIENoZSwgLi4uKQog\
+ICAgICB0eXBlOiBzdHJpbmcKICAgICAgZGVmYXVsdDogImFkbWluMTIzIgogICAgICByZXF1aXJl\
+ZDogdHJ1ZQogICAgICBkaXNwbGF5X3R5cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogSW5m\
+cmFzdHJ1Y3R1cmUgU2VydmljZXMK"
 
 COPY playbooks /opt/apb/actions
 COPY roles /opt/ansible/roles
@@ -66,3 +66,5 @@ ADD requirements.yml /opt/apb/actions/requirements.yml
 RUN ansible-galaxy install -r /opt/apb/actions/requirements.yml -f
 RUN chmod -R g=u /opt/{ansible,apb}
 USER apb
+
+ENV BUNDLE_DEBUG=true
