--- a/apb/roles/provision-java-starter-guides/tasks/main.yml
+++ b/apb/roles/provision-java-starter-guides/tasks/main.yml
@@ -20,22 +20,54 @@
   command: "oc annotate namespace/{{ namespace }} openshift.io/node-selector=\"env=infra\" --overwrite"
   when: infranodes.stdout != ""
 
+#- name: Get apps route suffix
+#  block:
+#    - openshift_v1_route:
+#        name: dummy
+#        namespace: "{{ namespace }}"
+#        state: present
+#        spec_to_kind: Service
+#        spec_to_name: dummy
+#        spec_port_target_port: 8080
+#      register: dummy_route
+#    - set_fact:
+#        apps_hostname_suffix: "{{ dummy_route.route.spec.host|regex_replace('^dummy-' + namespace + '\\.(.*)$', '\\1') }}"
+#    - openshift_v1_route:
+#        name: dummy
+#        namespace: "{{ namespace }}"
+#        state: absent
+
 - name: Get apps route suffix
   block:
-    - openshift_v1_route:
+    - k8s:
+        state: present
+        definition:
+          apiVersion: "route.openshift.io/v1"
+          kind: Route
+          metadata:
+            name: dummy
+            namespace: "{{ namespace }}"
+          spec:
+            to:
+              kind: Service
+              name: dummy
+            ports:
+            - targetPort: 8080
+    - k8s_facts:
+        api_version: "route.openshift.io/v1"
+        kind: Route
         name: dummy
         namespace: "{{ namespace }}"
-        state: present
-        spec_to_kind: Service
-        spec_to_name: dummy
-        spec_port_target_port: 8080
       register: dummy_route
     - set_fact:
-        apps_hostname_suffix: "{{ dummy_route.route.spec.host|regex_replace('^dummy-' + namespace + '\\.(.*)$', '\\1') }}"
-    - openshift_v1_route:
+        apps_hostname_suffix: "{{ dummy_route.resources[0].spec.host|regex_replace('^dummy-' + namespace + '\\.(.*)$', '\\1') }}"
+    - k8s:
+        state: absent
+        api_version: "route.openshift.io/v1"
+        kind: Route
         name: dummy
         namespace: "{{ namespace }}"
-        state: absent
+
 ###
 - name: "Create temporary directory"
   tempfile:
