Adding basic quota for the users

--- a/apb/roles/provision-java-starter-guides/defaults/main.yml
+++ b/apb/roles/provision-java-starter-guides/defaults/main.yml
@@ -18,3 +18,8 @@ gogs_release_version: 0.11.34
 
 reponame: "nationalparks"
 install_custom_stacks_json: []
+
+# per-user quotas
+quota_pods: 30
+quota_persistentvolumeclaims: 10
+quota_services: 30
