--- a/apb/roles/provision-java-starter-guides/tasks/install-terminals.yml
+++ b/apb/roles/provision-java-starter-guides/tasks/install-terminals.yml
@@ -1,17 +1,21 @@
 ---
 #####
-# Terminals:
-# https://raw.githubusercontent.com/openshift-evangelists/training-openshift-auth/master/examples/terminal-base.json
+# Terminals are provided by the hosted workshop template copied from
+# github/openshift-labs/workshop-jupyterhub/templates/hosted-workshop-production.json
+# We copy it to ../templates/ after each upstream release.
+#
+# TODO: Use template direct from upstream by -f URL reference and remove from
+# this repo.
 #####
-- name: "Process terminals template"
+- name: "Process hosted workshop template"
   template:
     src: hosted-workshop-production.json
     dest: "{{ tmp_dir.path }}/hosted-workshop-production.json"
 
-- name: Add terminals template to {{ namespace }}
+- name: Add hosted workshop template to {{ namespace }}
   command: "oc apply -f {{ tmp_dir.path }}/hosted-workshop-production.json -n {{ namespace }}"
 
-- name: Create terminals resources
+- name: Generate hosted workshop app manifest
   shell: >
         oc new-app hosted-workshop-production
         -p ADMIN_USERS={{ openshift_user }}
@@ -21,7 +25,7 @@
   args:
     chdir: "{{ tmp_dir.path }}"
 
-- name: Apply terminals objects
+- name: Apply hosted workshop manifest to instantiate cluster objects
   command: "oc apply -f hosted-workshop-production.json -n {{ namespace }}"
   args:
     chdir: "{{ tmp_dir.path }}"
