provision-java/defaults/main: No che by default
Stop installing the `che` feature by default.

TODO:
* Remove the rest of che scaffolding, e.g., `tasks/install-che.yml`, references in /apb.yml, etc
* Replace che with CodeReady Workspaces(?)

--- a/apb/roles/provision-java-starter-guides/defaults/main.yml
+++ b/apb/roles/provision-java-starter-guides/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-features_to_install: [etherpad, gogs, guides, nexus, ocp-ops-view, che, terminals]
+features_to_install: [etherpad, gogs, guides, nexus, ocp-ops-view, terminals]
 
 # DEFAULTS
 # namespace: ocp-workshop # This is defined in common-definitions
