--- a/apb/apb.yml
+++ b/apb/apb.yml
@@ -6,7 +6,7 @@ async: optional
 tags:
 - workshop
 metadata:
-  dependencies: ['docker.io/osevg/workshopper:latest','docker.io/openshiftdemos/gogs:0.11.34','quay.io/wkulhanek/etherpad:1.6.5','docker.io/sonatype/nexus3:3.11.0', 'docker.io/eclipse/che-server:3.7.1', 'docker.io/raffaelespazzoli/ocp-ops-view:latest']
+  dependencies: ['docker.io/osevg/workshopper:latest','docker.io/openshiftdemos/gogs:0.11.34','quay.io/wkulhanek/etherpad:1.6.5','docker.io/sonatype/nexus3:3.11.0', 'docker.io/raffaelespazzoli/ocp-ops-view:latest']
   displayName: "OpenShift Developer Starter Workshop Installer"
   longDescription: |-
     Installs the lab instructions and required components
@@ -14,7 +14,6 @@ metadata:
     - Nexus
     - Etherpad
     - Lab Guides
-    - Eclipse Che
     - OCP-OpsView (image by Raffaele Spazzoli)
     for running the Getting starter developing on OpenShift Workshop https://github.com/openshift-labs/starter-guides
   console.openshift.io/iconClass: "pficon pficon-process-automation"
@@ -71,7 +70,7 @@ plans:
       display_group: Lab Guide
     - name: infrasvcs_adm_user
       title: Infrastructure Services Admin User
-      description: Admin user for infrastructure services (Gogs, Che, ...)
+      description: Admin user for infrastructure services (Gogs, Nexus, ...)
       type: string
       default: "adminuser"
       required: true
@@ -79,7 +78,7 @@ plans:
       display_group: Infrastructure Services
     - name: infrasvcs_adm_password
       title: Infrastructure Services Admin Password
-      description: Admin password for infrastructure services (Gogs, Che, ...)
+      description: Admin password for infrastructure services (Gogs, Nexus, ...)
       type: string
       default: "admin123"
       required: true
