apb/apb.yml: Add terminal & spawner dependencies
Add workshop -terminal & -spawner to dependencies list.
Add Terminal to longDescription metadata displayed to an openshift
console deployer.
`apb bundle prepare` modifies Dockerfile after abp.yml change.

--- a/apb/apb.yml
+++ b/apb/apb.yml
@@ -6,7 +6,7 @@ async: optional
 tags:
 - workshop
 metadata:
-  dependencies: ['docker.io/osevg/workshopper:latest','docker.io/openshiftdemos/gogs:0.11.34','quay.io/wkulhanek/etherpad:1.6.5','docker.io/sonatype/nexus3:3.11.0', 'docker.io/raffaelespazzoli/ocp-ops-view:latest']
+  dependencies: ['docker.io/osevg/workshopper:latest','docker.io/openshiftdemos/gogs:0.11.34','quay.io/wkulhanek/etherpad:1.6.5','docker.io/sonatype/nexus3:3.11.0', 'docker.io/raffaelespazzoli/ocp-ops-view:latest', 'quay.io/openshiftlabs/workshop-spawner:3.0.5', 'quay.io/openshiftlabs/workshop-terminal:2.6.1']
   displayName: "OpenShift Developer Starter Workshop Installer"
   longDescription: |-
     Installs the lab instructions and required components
@@ -15,7 +15,8 @@ metadata:
     - Etherpad
     - Lab Guides
     - OCP-OpsView (image by Raffaele Spazzoli)
-    for running the Getting starter developing on OpenShift Workshop https://github.com/openshift-labs/starter-guides
+    - OpenShift Workshop Terminal
+    for running the Getting Started developing on OpenShift Workshop https://github.com/openshift-labs/starter-guides
   console.openshift.io/iconClass: "pficon pficon-process-automation"
   providerDisplayName: "Red Hat, Inc."
 plans:
