--- a/apb/roles/provision-java-starter-guides/tasks/install-ocp-ops-view.yml
+++ b/apb/roles/provision-java-starter-guides/tasks/install-ocp-ops-view.yml
@@ -5,7 +5,7 @@
 - name: "Copy ocp-ops-view resource list"
   copy:
     src: ocp-ops-view.yml
-    dest: "{{ tmp_dir.path }}/ocp-ops-view.yml"
+    dest: "{{ apb_tmp_dir.path }}/ocp-ops-view.yml"
 
 - name: Add anyuid to SA ocp-ops-view in {{ namespace }}
   command: "oc adm policy add-scc-to-user anyuid -z ocp-ops-view -n {{ namespace }}"
@@ -16,4 +16,4 @@
 - name: Configure SA ocp-ops-view in {{ namespace }}
   command: "oc apply -f ocp-ops-view.yml -n {{ namespace }}"
   args:
-    chdir: "{{ tmp_dir.path }}"
+    chdir: "{{ apb_tmp_dir.path }}"
