--- a/workshop/python-workshop.yml
+++ b/workshop/python-workshop.yml
@@ -1,5 +1,5 @@
 ---
-name: Starter labs (Python)
+name: Starter Labs (Python)
 description: Developing Python Applications on OpenShift - Starter Lab
 
 modules:
