--- a/workshop/java-workshop.yaml
+++ b/workshop/java-workshop.yaml
@@ -1,5 +1,5 @@
 ---
-name: Starter labs (Java)
+name: Starter Labs (Java)
 description: Developing Java Applications on OpenShift - Starter Lab
 
 modules:
