Updated content for parksmap logging, permissions, rsh

--- a/apb/Dockerfile
+++ b/apb/Dockerfile
@@ -32,30 +32,30 @@ dCBhZG1pbiByZXNvdXJjZXMKICAgICAgdHlwZTogc3RyaW5nCiAgICAgIHJlcXVpcmVkOiB0cnVl\
 CiAgICAgIGRpc3BsYXlfdHlwZTogcGFzc3dvcmQKICAgICAgZGlzcGxheV9ncm91cDogT3BlblNo\
 aWZ0IFVzZXIKICAgIC0gbmFtZTogd29ya3Nob3BfdHlwZQogICAgICB0aXRsZTogV29ya3Nob3Ag\
 dHlwZQogICAgICBkZXNjcmlwdGlvbjogVHlwZSBvZiB3b3Jrc2hvcCB0byBkZWxpdmVyIChKYXZh\
-LCBQeXRob24sIG5vZGUuanMpCiAgICAgIHR5cGU6IGVudW0KICAgICAgZW51bTogWydqYXZhJywg\
-J3B5dGhvbicsICdub2RlLmpzJywgJ3BocCddCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAgIGRp\
-c3BsYXlfdHlwZTogc2VsZWN0CiAgICAgIGRlZmF1bHQ6IGphdmEKICAgICAgZGlzcGxheV9ncm91\
-cDogV29ya3Nob3AKICAgIC0gbmFtZTogdXNlcl9jb3VudAogICAgICB0aXRsZTogTnVtYmVyIG9m\
-IHBhcnRpY2lwYW50cwogICAgICBkZXNjcmlwdGlvbjogTnVtYmVyIG9mIHBhcnRpY2lwYW50cyBm\
-b3IgdGhlIHdvcmtzaG9wLiBUaGVyZSB3aWxsIGJlIHByb3Zpc2lvbmVkIGluZnJhc3RydWN0dXJl\
-L3Byb2plY3QgZm9yIGVhY2ggcGFydGljaXBhbnQKICAgICAgdHlwZTogbnVtYmVyCiAgICAgIHJl\
-cXVpcmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfZ3JvdXA6IFdvcmtzaG9wCiAgICAtIG5hbWU6IG9w\
-ZW5zaGlmdF91c2VyX3Bhc3N3b3JkCiAgICAgIHRpdGxlOiBPcGVuU2hpZnQgVXNlciBQYXNzd29y\
-ZAogICAgICBkZXNjcmlwdGlvbjogVGhlIE9wZW5TaGlmdCBwYXNzd29yZCBmb3IgcGFydGljaXBh\
-bnRzIHRvIGJlIGRpc3BsYXllZCBpbiB0aGUgbGFiIGd1aWRlIHRvIHBhcnRpY2lwYW50cwogICAg\
-ICB0eXBlOiBzdHJpbmcKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV90eXBlOiB0\
-ZXh0CiAgICAgIGRpc3BsYXlfZ3JvdXA6IFdvcmtzaG9wCiAgICAtIG5hbWU6IGluZnJhc3Zjc19h\
-ZG1fdXNlcgogICAgICB0aXRsZTogSW5mcmFzdHJ1Y3R1cmUgU2VydmljZXMgQWRtaW4gVXNlcgog\
-ICAgICBkZXNjcmlwdGlvbjogQWRtaW4gdXNlciBmb3IgaW5mcmFzdHJ1Y3R1cmUgc2VydmljZXMg\
-KEdvZ3MsIE5leHVzLCAuLi4pCiAgICAgIHR5cGU6IHN0cmluZwogICAgICBkZWZhdWx0OiAiYWRt\
-aW51c2VyIgogICAgICByZXF1aXJlZDogdHJ1ZQogICAgICBkaXNwbGF5X3R5cGU6IHRleHQKICAg\
-ICAgZGlzcGxheV9ncm91cDogSW5mcmFzdHJ1Y3R1cmUgU2VydmljZXMKICAgIC0gbmFtZTogaW5m\
-cmFzdmNzX2FkbV9wYXNzd29yZAogICAgICB0aXRsZTogSW5mcmFzdHJ1Y3R1cmUgU2VydmljZXMg\
-QWRtaW4gUGFzc3dvcmQKICAgICAgZGVzY3JpcHRpb246IEFkbWluIHBhc3N3b3JkIGZvciBpbmZy\
-YXN0cnVjdHVyZSBzZXJ2aWNlcyAoR29ncywgTmV4dXMsIC4uLikKICAgICAgdHlwZTogc3RyaW5n\
-CiAgICAgIGRlZmF1bHQ6ICJhZG1pbjEyMyIKICAgICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlz\
-cGxheV90eXBlOiB0ZXh0CiAgICAgIGRpc3BsYXlfZ3JvdXA6IEluZnJhc3RydWN0dXJlIFNlcnZp\
-Y2VzCg=="
+LCBQeXRob24sIE5vZGUuanMsIFBIUCkKICAgICAgdHlwZTogZW51bQogICAgICBlbnVtOiBbJ2ph\
+dmEnLCAncHl0aG9uJywgJ25vZGUuanMnLCAncGhwJ10KICAgICAgcmVxdWlyZWQ6IHRydWUKICAg\
+ICAgZGlzcGxheV90eXBlOiBzZWxlY3QKICAgICAgZGVmYXVsdDogamF2YQogICAgICBkaXNwbGF5\
+X2dyb3VwOiBXb3Jrc2hvcAogICAgLSBuYW1lOiB1c2VyX2NvdW50CiAgICAgIHRpdGxlOiBOdW1i\
+ZXIgb2YgcGFydGljaXBhbnRzCiAgICAgIGRlc2NyaXB0aW9uOiBOdW1iZXIgb2YgcGFydGljaXBh\
+bnRzIGZvciB0aGUgd29ya3Nob3AuIFRoZXJlIHdpbGwgYmUgcHJvdmlzaW9uZWQgaW5mcmFzdHJ1\
+Y3R1cmUvcHJvamVjdCBmb3IgZWFjaCBwYXJ0aWNpcGFudAogICAgICB0eXBlOiBudW1iZXIKICAg\
+ICAgcmVxdWlyZWQ6IHRydWUKICAgICAgZGlzcGxheV9ncm91cDogV29ya3Nob3AKICAgIC0gbmFt\
+ZTogb3BlbnNoaWZ0X3VzZXJfcGFzc3dvcmQKICAgICAgdGl0bGU6IE9wZW5TaGlmdCBVc2VyIFBh\
+c3N3b3JkCiAgICAgIGRlc2NyaXB0aW9uOiBUaGUgT3BlblNoaWZ0IHBhc3N3b3JkIGZvciBwYXJ0\
+aWNpcGFudHMgdG8gYmUgZGlzcGxheWVkIGluIHRoZSBsYWIgZ3VpZGUgdG8gcGFydGljaXBhbnRz\
+CiAgICAgIHR5cGU6IHN0cmluZwogICAgICByZXF1aXJlZDogdHJ1ZQogICAgICBkaXNwbGF5X3R5\
+cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogV29ya3Nob3AKICAgIC0gbmFtZTogaW5mcmFz\
+dmNzX2FkbV91c2VyCiAgICAgIHRpdGxlOiBJbmZyYXN0cnVjdHVyZSBTZXJ2aWNlcyBBZG1pbiBV\
+c2VyCiAgICAgIGRlc2NyaXB0aW9uOiBBZG1pbiB1c2VyIGZvciBpbmZyYXN0cnVjdHVyZSBzZXJ2\
+aWNlcyAoR29ncywgTmV4dXMsIC4uLikKICAgICAgdHlwZTogc3RyaW5nCiAgICAgIGRlZmF1bHQ6\
+ICJhZG1pbnVzZXIiCiAgICAgIHJlcXVpcmVkOiB0cnVlCiAgICAgIGRpc3BsYXlfdHlwZTogdGV4\
+dAogICAgICBkaXNwbGF5X2dyb3VwOiBJbmZyYXN0cnVjdHVyZSBTZXJ2aWNlcwogICAgLSBuYW1l\
+OiBpbmZyYXN2Y3NfYWRtX3Bhc3N3b3JkCiAgICAgIHRpdGxlOiBJbmZyYXN0cnVjdHVyZSBTZXJ2\
+aWNlcyBBZG1pbiBQYXNzd29yZAogICAgICBkZXNjcmlwdGlvbjogQWRtaW4gcGFzc3dvcmQgZm9y\
+IGluZnJhc3RydWN0dXJlIHNlcnZpY2VzIChHb2dzLCBOZXh1cywgLi4uKQogICAgICB0eXBlOiBz\
+dHJpbmcKICAgICAgZGVmYXVsdDogImFkbWluMTIzIgogICAgICByZXF1aXJlZDogdHJ1ZQogICAg\
+ICBkaXNwbGF5X3R5cGU6IHRleHQKICAgICAgZGlzcGxheV9ncm91cDogSW5mcmFzdHJ1Y3R1cmUg\
+U2VydmljZXMK"
 
 COPY playbooks /opt/apb/actions
 COPY roles /opt/ansible/roles
